<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bsktbl">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:gravity="center_horizontal"
                android:text="@string/team_a"
                android:textColor="@color/team1_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_24"
                android:gravity="center_horizontal"
                android:text="@string/show_zero"
                android:textColor="@color/black_color"
                android:textSize="@dimen/text_56" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:onClick="addThreeForTeamA"
                android:text="@string/add_3"
                android:textColor="@color/white_color" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:onClick="addTwoForTeamA"
                android:text="@string/add_2"
                android:textColor="@color/white_color" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForTeamA"
                android:text="@string/free_throw"
                android:textColor="@color/white_color" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/width_1"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:gravity="center_horizontal"
                android:text="@string/team_b"
                android:textColor="@color/team2_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_24"
                android:gravity="center_horizontal"
                android:text="@string/show_zero"
                android:textColor="@color/black_color"
                android:textSize="@dimen/text_56" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:onClick="addThreeForTeamB"
                android:text="@string/add_3"
                android:textColor="@color/white_color" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:onClick="addTwoForTeamB"
                android:text="@string/add_2"
                android:textColor="@color/white_color" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForTeamB"
                android:text="@string/free_throw"
                android:textColor="@color/white_color" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_60"
        android:onClick="resetScore"
        android:text="@string/reset_text"
        android:textColor="@color/white_color" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_8"
        android:onClick="showResult"
        android:text="@string/text_finish"
        android:textColor="@color/white_color" />

</RelativeLayout>